--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".CreatemapActivity"></activity>
         <activity android:name=".SetuppageActivity"></activity>
+        <activity android:name=".GameplayActivity"></activity>
+
     </application>
 
 </manifest>
