--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".CreatemapActivity"></activity>
         <activity android:name=".SetuppageActivity"></activity>
         <activity android:name=".GameplayActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
 
     </application>
 
