--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".services.MusicService"/>
         <activity android:name=".CreatemapActivity"></activity>
         <activity android:name=".GameplayActivity"></activity>
         <activity android:name=".SettingsActivity"></activity>
